update templates and backen.py

--- a/templates/fronten.html
+++ b/templates/fronten.html
@@ -14,7 +14,7 @@
         <p class="slogan">EDUCATION IS A RIGHT</p>
         </div>
         <ul class="ulc">
-            <li><a class="link active" href="/learn">Home</a></li>
+            <li><a class="link active" href="/">Home</a></li>
             <li><a class="link" href="/aboutus">About us</a></li>
             <li><a class="link" href="#">Services</a></li>
             <li><a class="link" href="#">Contact</a></li>
